(library
  (name flow_codemods_utils)
  (wrapped false)
  (modules (:standard \ codemod_context))
  (libraries
    flow_logging_utils
    flow_parser_utils
    flow_server
    flow_server_env
    flow_service_inference
    flow_state_heaps_diffing
    flow_typing
  )
  (preprocess (pps lwt_ppx))
)

(library
  (name flow_codemods_context)
  (wrapped false)
  (modules codemod_context)
  (libraries
    flow_parser_utils
    flow_state_readers
    flow_typing
  )
  (preprocess (pps lwt_ppx))
)
