(library
  (name procs_bucket)
  (wrapped false)
  (modules
    bucket)
  (libraries
    base
    imported_core)
  (preprocess (pps lwt_ppx)))

(library
  (name procs_procs)
  (wrapped false)
  (modules
    mem_profile
    worker
    workerController)
  (libraries
    base
    flow_exit_status
    heap_shared_mem
    lwt.unix
    marshal_tools
    procs_bucket
    procfs
    sys_utils
    worker_cancel)
  (preprocess (pps lwt_ppx)))
