(library
  (name flow_service_code_action)
  (wrapped false)
  (libraries
    codemod_annotate_exports_hardcoded
    flow_common
    flow_lsp
    flow_server_env
    flow_service_type_info
    flow_state_heaps_module
    flow_state_heaps_parsing
    flow_typing_ty
  )
  (preprocess (pps lwt_ppx))
)
